# auxiliary-pow

./: README.md
pallets/aux-pow/: Cargo.toml
pallets/aux-pow/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
